<resources>
    <string name="app_name">login2</string>
    <string name="no_te_has_registrado">¿No te has registrado?</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="crear_una_cuenta">Crear una Cuenta</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="imagen_de_usuario">Imagen de usuario</string>
    <string-array name="estados_mexico">
        <item>Aguascalientes</item>
        <item>Baja California</item>
        <item>Baja California sur</item>
        <item>Campeche</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
        <item>Ciudad de Mexico</item>
        <item>Coahuila</item>
        <item>Colima</item>
        <item>Durango</item>
        <item>Guanajuato</item>
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>Jalizco</item>
        <item>Mexico</item>
        <item>Michoacán</item>
        <item>Morelos</item>
        <item>Nayarit</item>
        <item>Nuevo León</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
    </string-array>
</resources>