<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:id="@+id/mainLayout"
    tools:context=".MainActivity"
    android:background="#F5F5F5">

    <!-- Imagen de usuario -->
    <ImageView
        android:id="@+id/userImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/imagen_de_usuario"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <!-- Título -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/bienvenido"
        android:textColor="#FF6200EE"
        android:textSize="28sp"
        android:textStyle="bold" />

    <!-- Campo de Usuario -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/correo_electr_nico"
        android:drawableStart="@android:drawable/ic_menu_send"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#FF6200EE"
        android:fontFamily="sans-serif-light"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Campo de Contraseña -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:inputType="textPassword"
        android:padding="12dp"
        android:backgroundTint="#FF6200EE"
        android:fontFamily="sans-serif-light"
        android:layout_marginBottom="20dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <!-- Botón de Inicio de Sesión -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Iniciar Sesión"
        android:backgroundTint="#FF6200EE"
        android:textColor="#FFFFFF"
        android:padding="14dp"
        android:layout_marginBottom="16dp"
        tools:ignore="HardcodedText,VisualLintButtonSize" />

    <!-- Botón de Registro -->
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#03DAC5"
        android:padding="14dp"
        android:text="@string/crear_una_cuenta"
        android:textColor="#5E35B1"
        tools:ignore="VisualLintButtonSize" />

    <!-- Enlace para recuperar contraseña -->
    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textColor="#FF6200EE" />

    <!-- Nuevo enlace para registrarse -->
    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/no_te_has_registrado"
        android:textColor="#00796B" />
</LinearLayout>
